--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body> 
     <div class="screen">
         <div class="box1">
-            <img class=logo src="./images/logonm.jpg"><br>
-        </h3>Authentication Required</h3>
-        <br><br>
+            <img class=logo src="./images/logonm.png">
+        <h3>Authentication Required</h3><br>
         <div class="box2">
-            <br><h4>Please enter your username and password to continue.</h4><br>
+            <br>
+            <br><h4>Please enter your username and password to continue.</h4><br><br><br>
             <form>
                 <label for="fname">Username:</label>
                 <input type="text" class="usernamebox"><br><br>
