--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body> 
     <div class="screen">
         <div class="box1">
-            <img class=logo src="./images/logonm.png">
+            <img class=logo src="./images/nmlogo1.png">
         <h3>Authentication Required</h3><br>
         <div class="box2">
             <br>
